--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "console-plugin-template",
+  "name": "demo-plugin",
   "version": "0.0.1",
-  "description": "Template project for OpenShift Console plugins",
+  "description": "Simple proof of concept",
   "private": true,
   "license": "Apache-2.0",
   "repository": {
     "type": "git",
-    "url": "https://github.com/openshift/console-plugin-template.git"
+    "url": "https://github.com/spadgett/sgp-demo"
   },
   "scripts": {
     "clean": "rm -rf dist",
@@ -69,12 +69,14 @@
     "webpack-dev-server": "^4.7.4"
   },
   "consolePlugin": {
-    "name": "console-plugin-template",
+    "name": "demo-plugin",
     "version": "0.0.1",
-    "displayName": "OpenShift Console Plugin Template",
-    "description": "Template project for OpenShift Console plugins. Edit package.json to change this message and the plugin name.",
+    "displayName": "Basic Demo Plugin",
+    "description": "Proof of concept",
     "exposedModules": {
-      "ExamplePage": "./components/ExamplePage"
+      "CreateProjectModal": "./components/modals/CreateProjectModal",
+      "ExamplePage": "./components/ExamplePage",
+      "perspective": "./utils/perspective"
     },
     "dependencies": {
       "@console/pluginAPI": "*"
